<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/options_header">

        <ListPreference
            app:defaultValue="English"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="srclang"
            app:title="Source language"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="translate"
            app:title="Translate"
            app:summary="Translate received text to the selected language"
            app:defaultValue="false"/>



        <ListPreference
            app:dependency="translate"
            app:defaultValue="af"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="destlang"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="ip"
            app:title="@string/Ip"
            app:useSimpleSummaryProvider="true"
            app:summary="Enter IP of server"/>


        <EditTextPreference
            app:key="port"
            app:title="@string/Port"
            app:useSimpleSummaryProvider="true"
            app:summary="Enter port of server"/>

    </PreferenceCategory>

</PreferenceScreen>